<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textViewJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit new Job"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/newJobType"
        android:layout_width="301dp"
        android:layout_height="99dp"
        android:entries="@array/job_type_values"
        app:layout_constraintBottom_toTopOf="@+id/newJobUrgency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJob" />

    <EditText
        android:id="@+id/newJobDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:width="260dp"
        android:height="60dp"
        android:hint="yyyy-MM-dd"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/newJobSubmitJobButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newJobDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:width="260dp"
        android:height="60dp"
        android:hint="Job Description"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/newJobPlace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newJobDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:width="260dp"
        android:height="60dp"
        android:hint="Job Duration"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/newJobDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newJobPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:width="260dp"
        android:height="60dp"
        android:hint="Job Place"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/newJobDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/newJobUrgency"
        android:layout_width="301dp"
        android:layout_height="99dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/urgency_array"
        app:layout_constraintBottom_toTopOf="@+id/newJobSalary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/newJobSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:width="260dp"
        android:height="60dp"
        android:hint="Job Salary"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/newJobDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newJobSubmitJobButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="260dp"
        android:hint="Submit"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>