...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchToEmployerLoginPageButton"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/switchToEmployerLoginPageButton"
        android:layout_width="wrap_content"
...
